    pointless work. [Colin]
  * Display pending+fixed bugs as "fixed in NMU", not "pending upload".
    [Colin]
  * Add a man page for debbugsconfig. [Colin]
  * Report original tags when changing them, closes: #170630. [Colin]
  * Add missing <ul></ul> tags to db2html's output, closes: #50746. [Colin]
  * Add a 'submitter' command to service, based on a patch by Matt Kraai.
    [Colin]

 -- Colin Watson <cjwatson@debian.org>  Mon, 25 Nov 2002 03:50:20 +0000

debbugs (2.4) experimental; urgency=low

  * Updating the package with what's in CVS, even though this might
    completely break things for people who've been using the previous also
    broken package. <shrug> :) Upped the minor version since the changes
    are noticeable, and uploaded to experimental, just in case.
  * Applied speedup patch, that uses references, instead of copies.
    Thanks to Thomas Smith. Closes: #87176. [Adam]
  * Reverted some parts of the speedup patch because it breaks the API.
    [Anthony]
  * Bugs that are tagged fixed are now listed in a separate section in the
    web pages. Patch from Colin Watson. Closes: #86922. [Adam]
  * Added support for an additional Maintainers.override file, which is read
    after the normal one. This allows the normal one to be externally
    updated, but still have local overrides. [Adam]
  * Put <title> and </title> on the same line as the title since some lame
    browsers don't seem to like it otherwise. [Josip]
  * Include a mailto: URI in the header for a bug report. [Adam]
  * Added support for filtering on subject with include=subj:foo (exact
    match, case sensitive). [Anthony]
  * Added a missing http://, thanks to Julian Gilbey. [Anthony]
  * Use by-*.idx indices to speed up pkgreport.cgi. [Anthony]
  * Support "maint=" in pkgreport to give packages without a maintainer.
    [Anthony]
  * Updated Postfix documentation. [Darren]
  * Use two variables in order to reduce the amount of path hard-coding.