@@ -69,7 +69,6 @@ COPYRIGHT AND LACK-OF-WARRANTY NOTICE
 Copyright 1999 Darren O. Benham <gecko@debian.org>
 Copyright 1994,1995,1996,1997 Ian Jackson <ijackson@chiark.greenend.org.uk>
 Copyright 1997 nCipher Corporation Limited
-Copyright 1995 Steven Brenner (for cgi-lib.pl).
 
 This bug system is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
